fixed card-block boostrap class & added collapsable resume data 2 about

--- a/app/assets/stylesheets/application.scss
+++ b/app/assets/stylesheets/application.scss
@@ -168,7 +168,7 @@ body {
 }
 
 /* custom styles */
-.card-block {
+.card-body {
   color: black;
   text-align: left;
 }
@@ -198,12 +198,13 @@ body {
   left: 50%;
   min-width: 100%;
   min-height: 100%;
-  width: 100%;
+  width: auto;
   height: auto;
   z-index: -100;
   -webkit-transform: translateX(-50%) translateY(-50%);
   transform: translateX(-50%) translateY(-50%);
-  background: image-url('') no-repeat;
+  background-size: cover;
+  filter: blur(5px);
 }
 
 .app-footer{
@@ -226,4 +227,22 @@ body {
 .tweeters p{
   font-weight: bold;
   text-decoration: underline;
+}
+
+.app-card-container{
+  color: #333;
+  text-align: left;
+}
+
+.app-card-container > .card{
+  padding: 15px;
+  background-color: rgba(255, 255, 255, 0.75);
+  
+}
+
+.contact-card{
+  text-align: center;
+}
+.contact-card a{
+  color: #333;
 }
